fix: Fix compilation errors and test verification failures